--- a/CORE_JS/CH2/index.html
+++ b/CORE_JS/CH2/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p>스크립트전</p>
-    <script src="c02_06_typeconversion.js"></script>
-    <p>스크립트 후</p>
+    <script src="c02_13_loop.js"></script>
   </body>
 </html>
